fix: corrige erro de validação